fix feature content-wrap scroll issue

--- a/less/feature.less
+++ b/less/feature.less
@@ -3,6 +3,7 @@
 // -------------
 
 .feature {
+    background-color: @color__feature-content--background;
     @media @mobile {
         margin-bottom: 0;
         opacity: 1 !important;
@@ -189,7 +190,7 @@ body.feature-content-wrap {
         top: 0;
         bottom: 0;
         left: 0;
-        overflow: scroll;
+        overflow: auto;
         padding: 0;
         width: 50%;
         height: 100%;
